--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  <script type="text/babel" src="/src/index.js"></script>
-  <script type="text/babel" src="/src/Shared.js"></script>
-  <script type="text/babel" src="/src/App.js"></script>
+  <script defer type="text/babel" src="/src/index.js"></script>
   </body>
 </html>
